# MineMate

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
agents/: answerer.py  critic.py  events.py  memory.py  router.py  workflow.py
app/: chat_handler.py  gradio_app.py
config/: logging.py  paths.py  settings.py
config/prompts/: answerer.txt  critic.txt  router.txt
data/: bulk_crawl_progress.json  mod_list.json  proxy_crawl_progress.json
data/chroma/: chroma.sqlite3
data/conversations/: 1779024726656.json  1779029918838.json  1779031765503.json  1779031768663.json  1779031769974.json  1779032863239.json
data/qdrant_export/: raft_state.json
data/qdrant_export/collections/mcmod_v1/0/: newest_clocks.json  replica_state.json
data/qdrant_export/collections/mcmod_v1/0/segments/27f5da5f-9cc8-4fc4-be00-dd5953e1a46a/: 000010.sst  000082.sst  000120.sst  000133.sst  000225.sst  000239.sst  000252.sst  000336.sst  000619.sst  000626.sst  000646.sst  000725.sst  000732.sst  000758.sst  000765.sst  000778.sst  000799.sst  000819.sst  000867.sst  000880.sst  000894.sst  000914.sst  000922.sst  000928.sst  000949.sst  000955.sst  000961.sst  000987.sst  000994.sst  001035.sst  001043.sst  001159.sst  001173.sst  001194.sst  001255.sst  001283.sst  001297.sst  001311.sst  001317.sst  001393.sst  (+192 more)
data/qdrant_export/collections/mcmod_v1/0/segments/49732602-7ccb-4261-9542-26b8a49a1bf5/: 000084.sst  000124.sst  000130.sst  000188.sst  000202.sst  000221.sst  000289.sst  000302.sst  000309.sst  000315.sst  000321.sst  000328.sst  000342.sst  000348.sst  000369.sst  000442.sst  000475.sst  000488.sst  000507.sst  000555.sst  000594.sst  000648.sst  000681.sst  000760.sst  000786.sst  000798.sst  000805.sst  000825.sst  000832.sst  000866.sst  000872.sst  000885.sst  000911.sst  000925.sst  000939.sst  000999.sst  001045.sst  001059.sst  001113.sst  001119.sst  (+194 more)
data/qdrant_export/collections/mcmod_v1/0/segments/6a4a2002-4f57-4311-8d7d-5602bfa2bd5b/: 000010.sst  001151.sst  003429.sst  003434.sst  004283.sst  004291.sst  004297.sst  004304.sst  004311.sst  004319.sst  004325.sst  004331.sst  004338.sst  004346.sst  004352.sst  004364.sst  004373.sst  004379.sst  004381.sst  004386.sst  004392.sst  004393.sst  004396.sst  004399.sst  004400.sst  004401.sst  004403.sst  004405.sst  004407.sst  004409.sst  IDENTITY  LOG  MANIFEST-000005  segment.json
data/qdrant_export/collections/mcmod_v1/0/wal/: first-index
docs/superpowers/plans/: 2026-05-16-stage1-mvp.md
docs/superpowers/specs/: 2026-05-16-mc-mod-qa-design.md
kb/: chroma_retriever.py  retriever.py  schemas.py
llm/: deepseek_client.py  embeddings.py
minemate/: __init__.py  cli.py
pipeline/: build_index.py  bulk_crawl.py  clean.py  crawl.py  extract_integrations.py  proxy_crawl.py  structure.py  tag_mods.py
pipeline/crawlers/: http_client.py  mcmod_mod.py
pipeline/storage/: db.py  models.py  mysql_writer.py  qdrant_writer.py  raw_cache.py  writer.py
scripts/: eval_qa.py  export_data.py  import_data.py  init_db.py
tests/: conftest.py
tests/eval/: qa_set.jsonl
tests/fixtures/sample_mcmod_html/: create_intro.html
tests/integration/: test_e2e.py  test_qdrant_writer.py
tests/unit/: test_answerer.py  test_chat_handler.py  test_chroma_retriever.py  test_cli.py  test_compatibility.py  test_critic.py  test_critic_agent.py  test_deepseek_client.py  test_embeddings.py  test_eval_qa.py  test_events.py  test_gradio_app.py  test_http_client.py  test_hybrid_retriever.py  test_logging.py  test_mcmod_mod.py  test_models.py  test_mysql_writer.py  test_paths.py  test_raw_cache.py  test_recommend.py  test_retriever.py  test_router.py  test_schemas.py  test_search_mcmod_kb.py  test_settings.py  test_sqlite_db.py  test_structure.py  test_tag_writer.py  test_tools_integration.py  test_web_search_mcmod.py  test_workflow.py
tools/: compatibility.py  curate_modpack.py  find_latest_mods.py  get_mod_info.py  get_recipe.py  recommend_mods.py  search_mcmod_kb.py  web_search_mcmod.py
(+785 files in other folders)
