[project]
name = "minemate"
version = "0.1.0"
description = "MineMate — your AI buddy for Minecraft mods (Q&A agent based on mcmod.cn)"
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
  "llama-index-core>=0.11.0",
  "llama-index-embeddings-huggingface>=0.3.0",
  "sentence-transformers>=3.0.0",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "trafilatura>=1.10",
  "pydantic-settings>=2.4",
  "loguru>=0.7",
  "tenacity>=8.2",
  "gradio>=4.40",
  "openai>=1.40",
  "chromadb>=0.5",
  "click>=8.1",
]

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.5",
  "respx>=0.21",
]

[project.scripts]
minemate = "minemate.cli:main"

[tool.uv]
package = true

[tool.setuptools.packages.find]
include = ["minemate*"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not e2e and not slow and not integration'"
markers = [
  "e2e: end-to-end tests requiring docker + DeepSeek key",
  "slow: tests that download models or take a long time",
  "integration: tests that require external services like Qdrant or MySQL",
]
