[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "minemate"
version = "0.1.3"
description = "Your AI buddy for Minecraft mods — RAG + Multi-Agent Q&A based on mcmod.cn"
readme = "README.md"
requires-python = ">=3.11,<3.13"
license = "MIT"
license-files = ["LICENSE"]
authors = [
  {name = "FiRuu"},
]
keywords = [
  "minecraft",
  "minecraft-mod",
  "mcmod",
  "rag",
  "agent",
  "llm",
  "chatbot",
  "deepseek",
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: End Users/Desktop",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Games/Entertainment",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Natural Language :: Chinese (Simplified)",
]
dependencies = [
  "llama-index-core>=0.11.0",
  "llama-index-embeddings-huggingface>=0.3.0",
  "sentence-transformers>=3.0.0",
  "sqlalchemy>=2.0",
  "httpx>=0.27",
  "beautifulsoup4>=4.12",
  "lxml>=5.0",
  "trafilatura>=1.10",
  "pydantic-settings>=2.4",
  "loguru>=0.7",
  "tenacity>=8.2",
  "gradio>=4.40",
  "openai>=1.40",
  "chromadb>=0.5",
  "click>=8.1",
  "playwright>=1.40",
]

[project.urls]
Homepage = "https://github.com/FiRuu41/MineMate"
Repository = "https://github.com/FiRuu41/MineMate"
"Bug Tracker" = "https://github.com/FiRuu41/MineMate/issues"

[project.scripts]
minemate = "minemate.cli:main"

[dependency-groups]
dev = [
  "pytest>=8.0",
  "pytest-asyncio>=0.23",
  "pytest-mock>=3.14",
  "ruff>=0.5",
  "respx>=0.21",
]

[tool.hatch.build.targets.wheel]
packages = [
  "minemate",
  "agents",
  "app",
  "config",
  "kb",
  "llm",
  "pipeline",
  "tools",
  "scripts",
]
exclude = [
  "scripts/dev/**",
  "scripts/_remigrate.py",
  "**/__pycache__",
  "**/*.pyc",
]

[tool.hatch.build.targets.sdist]
include = [
  "minemate/",
  "agents/",
  "app/",
  "config/",
  "kb/",
  "llm/",
  "pipeline/",
  "tools/",
  "scripts/",
  "README.md",
  "LICENSE",
  "pyproject.toml",
  ".env.example",
]
exclude = [
  "**/__pycache__",
  "**/.pytest_cache",
  "**/*.pyc",
  "tests/",
  "scripts/dev/",
  "scripts/_remigrate.py",
  "data/",
  "out/",
  "docs/",
  ".env",
  ".env.bak",
  ".idea/",
  ".vscode/",
  ".git/",
  ".github/",
]

[tool.uv]
package = true

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-m 'not e2e and not slow and not integration'"
markers = [
  "e2e: end-to-end tests requiring docker + DeepSeek key",
  "slow: tests that download models or take a long time",
  "integration: tests that require external services like Qdrant or MySQL",
]
